--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,13 @@
+remote_theme: creative-theme-jekyll
 
+title: Rachel Williams | sciwithrach
+email: rshwilliams@live.com
+description: > # this means to ignore newlines until "baseurl:"
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "" # the base hostname & protocol for your site
+
+twitter_username: sciwithrach
+github_username: sciwithrach
+
+# Build settings
+markdown: kramdown
