--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: creative-theme-jekyll
+remote_theme: volny/creative-theme-jekyll
 
 title: Rachel Williams | sciwithrach
 email: rshwilliams@live.com
